plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.prgrms'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    //SpringBoot DATA JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    //SpringBoot Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    //SpringBoot Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    //swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    //SpringBoot Web
    implementation 'org.springframework.boot:spring-boot-starter-web'
    //Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    //MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'
    //REDIS
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    //OAUTH2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    //JWT
    implementation 'com.auth0:java-jwt:4.2.1'
    //H2
    runtimeOnly 'com.h2database:h2'

    // spring cloud aws
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    //SpringBoot Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
